WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269927
REGRESSION (
275156@main
): [ macOS Debug ] 3 tests in imported/w3c/web-platform-tests/css/css-view-transitions are constant crash
https://bugs.webkit.org/show_bug.cgi?id=269927
Summary
REGRESSION (275156@main): [ macOS Debug ] 3 tests in imported/w3c/web-platfor...
Marta Darbinyan
Reported
2024-02-22 10:29:33 PST
Description: imported/w3c/web-platform-tests/css/css-view-transitions/backdrop-filter-animated.html imported/w3c/web-platform-tests/css/css-view-transitions/new-content-is-inline.html imported/w3c/web-platform-tests/css/css-view-transitions/old-content-is-inline.html Is a constantly crashing after the test expectation was updated in
275156@main
. History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-view-transitions%2Fbackdrop-filter-animated.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-view-transitions%2Fnew-content-is-inline.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-view-transitions%2Fold-content-is-inline.html&style=debugK
Result: Not able to open
https://build.webkit.org/#/builders/369/builds/9943
since the webkit builds are under maintenance.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-22 10:29:52 PST
<
rdar://problem/123454964
>
EWS
Comment 2
2024-02-22 10:58:29 PST
Test gardening commit
275187@main
(295ddbd8ca58): <
https://commits.webkit.org/275187@main
> Reviewed commits have been landed. Closing PR #24960 and removing active labels.
Tim Nguyen (:ntim)
Comment 3
2024-02-22 11:09:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24963
Fujii Hironori
Comment 4
2024-02-22 14:18:18 PST
History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-view-transitions%2Fbackdrop-filter-animated.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-view-transitions%2Fnew-content-is-inline.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-view-transitions%2Fold-content-is-inline.html&style=debug
Fujii Hironori
Comment 5
2024-02-22 14:21:45 PST
https://build.webkit.org/results/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/275179%40main%20%281742%29/imported/w3c/web-platform-tests/css/css-view-transitions/backdrop-filter-animated-stderr.txt
ASSERTION FAILED: aSortingIndex != bSortingIndex /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebCore/animation/WebAnimationUtilities.cpp(112) : bool WebCore::compareStyleOriginatedAnimationOwningElementPositionsInDocumentTreeOrder(const Styleable &, const Styleable &) 1 0x107d2c7d8 WTFCrash 2 0x1192bd5f0 WebCore::CachedResourceHandleBase::operator!() const 3 0x1192b5648 WebCore::compareStyleOriginatedAnimationOwningElementPositionsInDocumentTreeOrder(WebCore::Styleable const&, WebCore::Styleable const&) 4 0x1192b1e78 WebCore::compareCSSAnimations(WebCore::CSSAnimation const&, WebCore::CSSAnimation const&) 5 0x1192b1898 WebCore::compareAnimationsByCompositeOrder(WebCore::WebAnimation const&, WebCore::WebAnimation const&) 6 0x119cbcd10 auto WebCore::Document::matchingAnimations(WTF::Function<bool (WebCore::Element&)> const&)::$_45::operator()<WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>, WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>>(WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>&, WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>&) const 7 0x119cbc948 void std::__1::__stable_sort<std::__1::_ClassicAlgPolicy, WebCore::Document::matchingAnimations(WTF::Function<bool (WebCore::Element&)> const&)::$_45&, WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>*>(WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>*, WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>*, WebCore::Document::matchingAnimations(WTF::Function<bool (WebCore::Element&)> const&)::$_45&, std::__1::iterator_traits<WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>*>::difference_type, std::__1::iterator_traits<WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>*>::value_type*, long) 8 0x119cbc6ec void std::__1::__stable_sort_impl[abi:v160006]<std::__1::_ClassicAlgPolicy, WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>*, WebCore::Document::matchingAnimations(WTF::Function<bool (WebCore::Element&)> const&)::$_45>(WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>*, WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>*, WebCore::Document::matchingAnimations(WTF::Function<bool (WebCore::Element&)> const&)::$_45&) 9 0x119c1d6c4 void std::__1::stable_sort[abi:v160006]<WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>*, WebCore::Document::matchingAnimations(WTF::Function<bool (WebCore::Element&)> const&)::$_45>(WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>*, WTF::RefPtr<WebCore::WebAnimation, WTF::RawPtrTraits<WebCore::WebAnimation>, WTF::DefaultRefDerefTraits<WebCore::WebAnimation>>*, WebCore::Document::matchingAnimations(WTF::Function<bool (WebCore::Element&)> const&)::$_45) 10 0x119c1d4c0 WebCore::Document::matchingAnimations(WTF::Function<bool (WebCore::Element&)> const&) 11 0x119c1d300 WebCore::Document::getAnimations() 12 0x116bff4f4 WebCore::jsDocumentPrototypeFunction_getAnimationsBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDocument*) 13 0x116bff41c long long WebCore::IDLOperation<WebCore::JSDocument>::call<&WebCore::jsDocumentPrototypeFunction_getAnimationsBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSDocument*), (WebCore::CastedThisErrorBehavior)0>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*) 14 0x116be1838 WebCore::jsDocumentPrototypeFunction_getAnimations(JSC::JSGlobalObject*, JSC::CallFrame*) 15 0x28001003c 14 ??? 0x000000028001003c 0x0 + 10737483836 16 0x10a449464 llint_entry 17 0x10a4236b4 vmEntryToJavaScript 18 0x109568c64 JSC::Interpreter::executeCallImpl(JSC::VM&, JSC::JSObject*, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 19 0x109568d54 JSC::Interpreter::executeCall(JSC::JSObject*, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 20 0x1097f6178 JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&) 21 0x1097f623c JSC::call(JSC::JSGlobalObject*, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 22 0x1097f6550 JSC::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 23 0x1193dd450 WebCore::JSExecState::profiledCall(JSC::JSGlobalObject*, JSC::ProfilingReason, JSC::JSValue, JSC::CallData const&, JSC::JSValue, JSC::ArgList const&, WTF::NakedPtr<JSC::Exception>&) 24 0x1192cc724 WebCore::JSCallbackData::invokeCallback(WebCore::JSDOMGlobalObject&, JSC::JSObject*, JSC::JSValue, JSC::MarkedVector<JSC::JSValue, 8ul, WTF::RecordOverflow>&, WebCore::JSCallbackData::CallbackType, JSC::PropertyName, WTF::NakedPtr<JSC::Exception>&) 25 0x1166d95f0 WebCore::JSCallbackDataStrong::invokeCallback(JSC::JSValue, JSC::MarkedVector<JSC::JSValue, 8ul, WTF::RecordOverflow>&, WebCore::JSCallbackData::CallbackType, JSC::PropertyName, WTF::NakedPtr<JSC::Exception>&) 26 0x1179325c4 WebCore::JSRequestAnimationFrameCallback::handleEvent(double) 27 0x119e51094 WebCore::ScriptedAnimationController::serviceRequestAnimationFrameCallbacks(WTF::Seconds) 28 0x119c12d1c WebCore::Document::serviceRequestAnimationFrameCallbacks() 29 0x11acadb74 WebCore::Page::updateRendering()::$_33::operator()(WebCore::Document&) const 30 0x11acadb20 WTF::Detail::CallableWrapper<WebCore::Page::updateRendering()::$_33, void, WebCore::Document&>::call(WebCore::Document&) 31 0x119e4d3dc WTF::Function<void (WebCore::Document&)>::operator()(WebCore::Document&) const com.apple.WebKit.WebContent.Development terminated (pid 9687) for reason: crash LEAK: 1 WebPageProxy
EWS
Comment 6
2024-02-22 15:34:31 PST
Committed
275206@main
(85d80fb2ccd2): <
https://commits.webkit.org/275206@main
> Reviewed commits have been landed. Closing PR #24963 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug