REGRESSION (275156@main): [ macOS Debug ] 3 tests in imported/w3c/web-platform-tests/css/css-view-transitions are constant crash https://bugs.webkit.org/show_bug.cgi?id=269927 rdar://123454964

Reviewed by Matt Woodrow.

Animation sort order needs to be defined for view transition named pseudo-elements. The sort order follows tree order, so assuming Y follows X in the named elements map:

1) ::view-transition
2) ::view-transition-group(X)
3) ::view-transition-image-pair(X)
4) ::view-transition-old(X)
5) ::view-transition-new(X)
6) ::view-transition-group(Y)
7) ::view-transition-image-pair(Y)
8) ::view-transition-old(Y)
9) ::view-transition-new(Y)

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/animation/WebAnimationUtilities.cpp:
(WebCore::compareStyleOriginatedAnimationOwningElementPositionsInDocumentTreeOrder):
* Source/WebCore/style/PseudoElementIdentifier.h:
(WebCore::Style::isNamedViewTransitionPseudoElement):

Canonical link: https://commits.webkit.org/275206@main